openshift-services/service-mesh/gateway3/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway3
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    hostname: istio-ingressgateway3-bookinfo.apps.ipi.aws.joshgav.com
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    hostname: istio-ingressgateway3-bookinfo.apps.ipi.aws.joshgav.com
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: istio-ingressgateway3-bookinfo-keypair
